<resources>
    <string name="app_name">Guide_a_City</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">we will guide you!!</string>
    <string name="powered_by">Powered By Rishi Raj</string>
    <!--Strings for On Boarding Screen-->
    <!--Titles-->
    <string name="first_slide_title">Search your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city.We will display specific or all related place to match your search</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us.you can perform booking as well</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a prat of our growing industry then add your place by following simple step</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket the you don\'t have to worry about anything</string>
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--string for Dashboard -->
    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!--Titles and Descriptions-->

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_views_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <!--menu-->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>

    <!-- profile   -->
    <string name="login">LogIn</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>

    <!--    Categories-->
    <string name="restaurant">Restaurant</string>
    <string name="bankss">Banks</string>
    <string name="education">Education</string>
    <string name="school">School</string>
    <string name="shopss">Shops</string>


    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <!--    categories-->
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="hospitals">Hospitals</string>

    <!-- String for use   -->

    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Full Name</string>
    <string name="signup_email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="next_page">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age</string>

    <!-- OTP Screen-->
    <string name="otp_code_text">Otp</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n</string>
    <string name="forget_password_desc">Provide Your Account\'s Email for which you want to rest your password</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_desc">Select which contact detail should we use to reset your password?</string>
    <string name="via_email">Via Email</string>
    <string name="new_credentials_desc">Our Identity has been verified set your new Password</string>
    <string name="new_credentials">New Credentials</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_desc">Your Password has been Updated!!</string>


    <string name="dummy">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
    </string>

</resources>
