<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_dashboard_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/menu_search_icon"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/menu_categories_icon"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/nav_add_missing_place"
            android:icon="@drawable/menu_add_missing_place_icon"
            android:title="@string/add_missing_place" />


    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/menu_login_icon"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/menu_profile_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/menu_logout_icon"
                    android:title="@string/logout" />


            </group>


        </menu>


    </item>

    <item android:title="Categories">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_restaurants"
                    android:icon="@drawable/restaurent_icon"
                    android:title="@string/restaurants" />
                <item
                    android:id="@+id/nav_banks"
                    android:icon="@drawable/menu_bank_icon"
                    android:title="@string/bankss" />
                <item
                    android:id="@+id/nav_education"
                    android:icon="@drawable/menu_education_icon"
                    android:title="@string/education" />
                <item
                    android:id="@+id/nav_school"
                    android:icon="@drawable/menu_school_icon"
                    android:title="@string/school" />
                <item
                    android:id="@+id/nav_shop"
                    android:icon="@drawable/shops"
                    android:title="@string/shopss" />


            </group>


        </menu>


    </item>

    <item android:title="Share">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/menu_share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/menu_rateus_icon"
                    android:title="@string/rate_us" />


            </group>


        </menu>


    </item>


</menu>