<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ui.LoginSignup.RetailerStartUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/resturant_img"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="120dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:fontFamily="@font/muli"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">
            
            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/login"
                android:onClick="callLoginScreen"
                android:textColor="@color/black"
                android:background="@color/colorPrimary"
                android:transitionName="transition_login"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="callSignUpScreen"
                android:textColor="@color/black"
                android:text="@string/sign_up"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:transitionName="transition_Signup_screen"/>

            
            
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:layout_marginRight="10dp"/>


    </LinearLayout>



</ScrollView>